--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -109,7 +109,7 @@
               <span class="cardSubHeading crd-hdng">Registration Details</span>
 
               <div><b class="crd-lft">Number of People Applied</b> <span class="crd-ryt">:
-                  {{techteach.no_of_users_applied}}</span>
+                  {{techteach.no_of_people_applied}}</span>
               </div>
 
               <ul class="nav nav-pills crd-btn-dv">
@@ -180,7 +180,7 @@
               <span class="cardSubHeading crd-hdng">Registration Details</span>
 
               <div><b class="crd-lft">Number of People Applied</b> <span class="crd-ryt">:
-                  {{techtalkdata.no_of_users_applied}}</span>
+                  {{techtalkdata.no_of_people_applied}}</span>
               </div>
               <ul class="nav nav-pills crd-btn-dv">
                 <li class="nav-item">
@@ -229,7 +229,7 @@
                 &nbsp;&nbsp;&nbsp; <span>
                   <b>Event on</b> : {{selectedTechTeach.event_date}}</span>
                 &nbsp;&nbsp;&nbsp; <span>
-                  <b>Number of people applied</b> : {{selectedTechTeach.no_of_users_applied}}</span>
+                  <b>Number of people applied</b> : {{selectedTechTeach.no_of_people_applied}}</span>
               </div>
             </div>
             <br />
@@ -321,7 +321,7 @@
                   <b>Event on</b> : {{selectedTechTalk.event_date}}</span>
                 &nbsp;&nbsp;&nbsp;
                 <span>
-                  <b>Number of people applied</b> : {{selectedTechTalk.no_of_users_applied}} </span>
+                  <b>Number of people applied</b> : {{selectedTechTalk.no_of_people_applied}} </span>
 
               </div>
             </div>
