--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -416,7 +416,7 @@
                         <div class="form-group col-6" *ngIf="showUpload">
                             <label for="publicationFileUpload"><span class="red">*</span> Upload Publication
                                 File:</label>
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="publication_file">
                         </div>
                     </div>
@@ -530,7 +530,7 @@
                             <label for="file">File :</label>
                             &nbsp;&nbsp;
 
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="file">
 
                         </div>
@@ -555,7 +555,7 @@
                             <!-- <input ng2FileSelect type='file' (change)="readUrl($event)" formControlName="referenceLink"
                                 accept=".*" [uploader]="uploader"> -->
 
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="referenceLink">
                         </div>
                     </div>
@@ -1004,7 +1004,7 @@
                             <label for="file">File :</label>
                             &nbsp;&nbsp;
 
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="file">
 
                         </div>
@@ -1027,7 +1027,7 @@
                             <label for="referenceLink">Reference Link :</label>
                             &nbsp;&nbsp;
                             <input type="text" class="form-control" formControlName="referenceLink">
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="referenceLink">
 
                         </div>
@@ -1892,7 +1892,7 @@
                             <label for="file">File :</label>
                             &nbsp;&nbsp;
 
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="file">
 
                         </div>
@@ -1917,7 +1917,7 @@
                             <!-- <input ng2FileSelect type='file' (change)="readUrl($event)" formControlName="referenceLink"
                             accept=".*" [uploader]="uploader"> -->
 
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="referenceLink">
                         </div>
                     </div>
@@ -2076,7 +2076,7 @@
                             <label for="file">File :</label>
                             &nbsp;&nbsp;
 
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="file">
 
                         </div>
@@ -2099,7 +2099,7 @@
                             <label for="referenceLink">Reference Link :</label>
                             &nbsp;&nbsp;
                             <input type="text" class="form-control" formControlName="referenceLink">
-                            <input class="form-control" type="file" accept="image1/*" (change)="readUrl($event)"
+                            <input class="form-control" type="file" accept=".pdf,.doc" (change)="readUrl($event)"
                                 formControlName="referenceLink">
 
                         </div>
