--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,9 +1,13 @@
+<!-- <div id="loader" *ngIf="showLoader">
+  <div class="loader">Loading...</div>
+</div> -->
 <div class="container">
   <div class="row">
     <span style="text-align: center;  width: 100%;">
       <h4 class="text-center title-style">Profile</h4>
     </span>
   </div><br />
+
   <div class="row">
     <div class="col-sm-2" style="text-align: center">
       <div>
