--- a/src/styles.css
+++ b/src/styles.css
@@ -404,6 +404,23 @@ h1{
      font-size: 20px;
 }
 
+#loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: rgba(51, 33, 33, 0.72);
+  z-index: 99999;
+  }
+  .loader{
+      position: absolute;
+      widows: 30px;
+      margin: 0px auto;
+      top:50%;
+      left:50%;
+      transform: translate(-50%,-50%);
+
+  }
+  
 /* .ovrflw_h{
     overflow: hidden;
 } */
