my profile details changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1493,7 +1493,7 @@
                         </div>
                     </div>
                     <span style="color: #176086  !important; text-decoration: underline; ">
-                        <h3 style="color: #176086  !important;font-size: 20px;">Speaker Details</h3>
+                        <h3 style="color: #176086  !important;font-size: 20px;">Industrial Expert Details</h3>
                     </span>
                     <div formGroupName="expertDetails">
                         <div class="row">
@@ -2349,7 +2349,7 @@
                         </div>
                     </div>
                     <span style="color: #176086  !important; text-decoration: underline; ">
-                        <h3 style="color: #176086  !important;font-size: 20px;">Speaker Details</h3>
+                        <h3 style="color: #176086  !important;font-size: 20px;">Industrial Expert Details</h3>
                     </span>
                     <div formGroupName="expertDetails">
                         <div class="row">
