--- a/src/app/tech-bank/tech-bank.component.css
+++ b/src/app/tech-bank/tech-bank.component.css
@@ -124,6 +124,12 @@
     background-color: #d8d6d6;
     outline: 1px solid rgb(242, 242, 243);
 }
+
+.tech-bank-main a{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 1rem;
+    font-weight: 400;
+}
 /***********======================newcode=================================******/
 
 
